# cnam-intelligence-artificielle-sharp

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SUJET.md  compose.gpu.yaml  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  config.py  main.py  predict.py  train.py
src/api/: __init__.py  __main__.py  inference.py  server.py
src/train/: __init__.py  __main__.py  evaluation.py  extraction.py  preparation.py  reporting.py  training.py  validation.py
tests/: __init__.py  test_api.py  test_finger_count.py  test_preparation.py  test_validation.py
web/: index.css  index.html  index.js
