[project]
name = "cnam-intelligence-artificielle-sharp"
version = "1.0.0"
requires-python = "==3.12.13"
dependencies = [
    "pandas==3.0.2",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "roboflow==1.3.8",
    "torch==2.12.0",
    "ultralytics==8.4.51",
]

[dependency-groups]
dev = ["pytest==9.0.3", "pytest-cov==7.1.0", "ruff==0.15.9", "ty==0.0.29"]

[tool.uv]
add-bounds = "exact"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "CPY",
    "ERA",
    "T20",
    "EM101",
    "PLR2004",
    "TRY003",
    "S101",
    "COM812",
]
