[project]
name = "cnam-intelligence-artificielle-sharp"
version = "2.0.0"
requires-python = "==3.12.13"
dependencies = [
    "fastapi==0.136.3",
    "pandas==3.0.2",
    "pillow==12.2.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.29",
    "pyyaml==6.0.3",
    "roboflow==1.3.8",
    "torch==2.12.0",
    "ultralytics==8.4.51",
    "uvicorn==0.48.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pre-commit==4.6.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "ruff==0.15.9",
    "ty==0.0.29",
]

[tool.uv]
add-bounds = "exact"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.ty.environment]
extra-paths = ["."]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "CPY",
    "ERA",
    "T20",
    "EM101",
    "PLR0913",
    "PLR2004",
    "TRY003",
    "S101",
    "S104",
    "S311",
    "COM812",
    "E501",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
